project/logs/20250523_170038.log
Hello,DirectX!

clientSize:1280,720

Use Adapater:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader,path:Object3d.VS.hlsl,prefile:vs_6_0

Object3d.VS.hlsl:3:5: error: unknown type name 'float_t4x4'
    float_t4x4 WVP;
    ^

